[gd_scene load_steps=6 format=2]

[ext_resource path="res://train/Locomotive.gd" type="Script" id=1]
[ext_resource path="res://train/Cab.tscn" type="PackedScene" id=2]
[ext_resource path="res://train/Engine.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/audio/sounds/chug.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/sounds/train-whistle.wav" type="AudioStream" id=5]

[node name="Locomotive" type="Node2D"]
script = ExtResource( 1 )

[node name="Cab3" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 119 )

[node name="Cab2" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 61 )

[node name="Cab" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 177 )

[node name="Engine" parent="." instance=ExtResource( 3 )]

[node name="ChugSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0.832165, -24.4103 )
stream = ExtResource( 4 )
volume_db = -10.0
autoplay = true

[node name="Whistle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="WhistleTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="WhistleTimer" to="." method="_on_WhistleTimer_timeout"]
